--- a/academie.html
+++ b/academie.html
@@ -41,7 +41,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   <div id="header"></div>
-  <main class="container mx-auto p-4 space-y-8">
+  <main id="main" class="container mx-auto p-4 space-y-8">
 
     <section class="hero bg-base-200 text-center rounded-xl p-8">
       <h1>L'académie : bien plus que du jeu vidéo</h1>
