--- a/concept.html
+++ b/concept.html
@@ -24,7 +24,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   <div id="header"></div>
 
-  <main class="container mx-auto p-4 space-y-8">
+  <main id="main" class="container mx-auto p-4 space-y-8">
 
     <section class="hero bg-base-200 text-center rounded-xl p-8">
       <h1>Transformer le plaisir de jouer en compétences pour la vie</h1>
