--- a/contact.html
+++ b/contact.html
@@ -230,7 +230,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div id="header"></div>
   
-  <main class="container mx-auto p-4 space-y-8">
+  <main id="main" class="container mx-auto p-4 space-y-8">
     <section class="hero bg-base-200 text-center rounded-xl p-8">
       <h1>Préparez dès maintenant la rentrée 2026 !</h1>
       <p>Notre académie ouvrira ses portes en <strong>janvier 2026</strong>. Posez vos questions, demandez une présentation ou réservez votre place dès maintenant.</p>
