--- a/enjeux.html
+++ b/enjeux.html
@@ -24,7 +24,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
     <div id="header"></div>
 
-    <main class="container mx-auto p-4 space-y-8">
+    <main id="main" class="container mx-auto p-4 space-y-8">
 
         <section class="hero bg-base-200 text-center rounded-xl p-8">
             <h1>Le jeu vidéo : une réalité, des enjeux, nos solutions</h1>
