--- a/faq.html
+++ b/faq.html
@@ -23,7 +23,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   <div id="header"></div>
-  <main class="container mx-auto p-4 space-y-8">
+  <main id="main" class="container mx-auto p-4 space-y-8">
 
     <section class="card bg-base-100 shadow-xl p-6">
       <h1>Foire aux questions</h1>
