--- a/kit-pedagogique.html
+++ b/kit-pedagogique.html
@@ -24,7 +24,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   <div id="header" class="no-print"></div>
 
-  <main class="container mx-auto p-4 space-y-8">
+  <main id="main" class="container mx-auto p-4 space-y-8">
     <article class="card bg-base-100 shadow-xl p-6 document-body">
       
       <header class="document-header">
