--- a/educateurs.html
+++ b/educateurs.html
@@ -1,110 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr" data-theme="autumn">
-<head>
-  <meta charset="UTF-8">
-  <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-WMCMP74V');</script>
-  <!-- End Google Tag Manager -->
-  
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Espace éducateurs : le jeu vidéo comme outil pédagogique | Ludus Mentis</title>
-  <meta name="description" content="Pour les enseignants et professionnels de l'éducation. Découvrez comment nos ateliers développent des compétences clés (collaboration, esprit critique) applicables en milieu scolaire.">
-  <meta name="keywords" content="espace éducateurs, outil pédagogique, esport scolaire, projet pédagogique, compétences 21e siècle, savoir-être">
-  
-  <!-- DaisyUI + Tailwind CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
-  <script src="https://cdn.tailwindcss.com"></script>
-  
-  <!-- Configuration Tailwind -->
-  <script>
-    tailwind.config = {
-      darkMode: 'class',
-      theme: {
-        extend: {
-          colors: {
-            primary: '#fb923c',
-            'primary-focus': '#ea580c',
-            secondary: '#fbbf24',
-            accent: '#ef4444',
-          },
-          fontFamily: {
-            'sans': ['Inter', 'system-ui', '-apple-system', 'sans-serif'],
-            'display': ['Space Grotesk', 'system-ui', 'sans-serif'],
-          }
-        }
-      }
-    }
-  </script>
-  
-  <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
-  
-  <!-- Custom styles -->
-  <link rel="stylesheet" href="assets/css/styles.css">
-  <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
+<head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Éducateurs | Ludus Mentis</title> <meta name="description" content="Offre éducative clé‑en‑main pour établissements et équipes pédagogiques."> <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" /> <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="min-h-screen bg-base-100">
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
-  
-  <div id="header"></div>
-
-  <main class="container">
-<section class="max-w-5xl mx-auto">
-  <h1 class="text-4xl font-extrabold mb-4">Éducateurs & écoles</h1>
-  <p class="text-lg text-gray-700 mb-8">Un cadre clé-en-main pour utiliser le jeu vidéo comme médiation éducative, sans improvisation et sans prise de risque.</p>
-
-  <div class="grid md:grid-cols-3 gap-6 mb-8">
-    <div class="card bg-base-100 shadow"><div class="card-body"><h2 class="card-title">Cadre prêt à l’emploi</h2><p>Rituels, séquences, fiches de transfert, hygiène numérique.</p></div></div>
-    <div class="card bg-base-100 shadow"><div class="card-body"><h2 class="card-title">Engagement des élèves</h2><p>Coopération, communication, régulation des émotions via le jeu.</p></div></div>
-    <div class="card bg-base-100 shadow"><div class="card-body"><h2 class="card-title">Accompagnement</h2><p>1 séance pilote accompagnée, supervision optionnelle.</p></div></div>
-  </div>
-
-  <section class="mb-10">
-    <h3 class="text-2xl font-bold mb-3">Comment on démarre ?</h3>
-    <ol class="list-decimal ml-5 text-gray-700 space-y-2">
-      <li>Échange de 20 minutes pour cadrer votre contexte.</li>
-      <li>Séance pilote co-animée.</li>
-      <li>Accès au kit et adaptation à votre établissement.</li>
-    </ol>
-  </section>
-
-  <section class="mb-10">
-    <h3 class="text-2xl font-bold mb-3">Ce que comprend le kit</h3>
-    <div class="grid md:grid-cols-2 gap-6">
-      <div class="card bg-base-100 shadow"><div class="card-body">
-        <ul class="list-disc ml-5 space-y-2">
-          <li>Fiches activités (objectifs, déroulé, critères)</li>
-          <li>Rituels d’ouverture et de clôture</li>
-          <li>Grilles de débrief et de transfert</li>
-        </ul>
-      </div></div>
-      <div class="card bg-base-100 shadow"><div class="card-body">
-        <ul class="list-disc ml-5 space-y-2">
-          <li>Guide hygiène numérique</li>
-          <li>Cadre de gestion de groupe</li>
-          <li>Exemples de plannings</li>
-        </ul>
-      </div></div>
-    </div>
-  </section>
-
-  <div class="flex gap-3">
-    <a href="kit-pedagogique.html" class="btn btn-outline">Voir l’aperçu du kit</a>
-    <a href="contact.html" class="btn btn-primary text-white">Demander une démo</a>
-  </div>
+<body> <div id="header"></div> <main class="container mx-auto px-4 py-10">
+<section class="max-w-5xl mx-auto"> <h1 class="text-4xl font-extrabold mb-4">Éducateurs & écoles</h1> <p class="text-lg text-gray-700 mb-8">Un cadre clé‑en‑main pour utiliser le jeu vidéo comme médiation éducative, sans improvisation et sans prise de risque.</p> <div class="grid md:grid-cols-3 gap-6 mb-8"> <div class="card bg-base-100 shadow"><div class="card-body"><h2 class="card-title">Cadre prêt à l’emploi</h2><p>Rituels, séquences, fiches de transfert, hygiène numérique.</p></div></div> <div class="card bg-base-100 shadow"><div class="card-body"><h2 class="card-title">Engagement des élèves</h2><p>Coopération, communication, régulation des émotions via le jeu.</p></div></div> <div class="card bg-base-100 shadow"><div class="card-body"><h2 class="card-title">Accompagnement</h2><p>Séance pilote co‑animée, supervision optionnelle.</p></div></div> </div> <section class="mb-10"> <h3 class="text-2xl font-bold mb-3">Comment on démarre ?</h3> <ol class="list-decimal ml-5 text-gray-700 space-y-2"> <li>Échange de 20 minutes pour cadrer votre contexte.</li> <li>Séance pilote co-animée.</li> <li>Accès au kit et adaptation à votre établissement.</li> </ol> </section> <section class="mb-10"> <h3 class="text-2xl font-bold mb-3">Ce que comprend le kit</h3> <div class="grid md:grid-cols-2 gap-6"> <div class="card bg-base-100 shadow"><div class="card-body"> <ul class="list-disc ml-5 space-y-2"> <li>Fiches activités (objectifs, déroulé, critères)</li> <li>Rituels d’ouverture et de clôture</li> <li>Grilles de débrief et de transfert</li> </ul> </div></div> <div class="card bg-base-100 shadow"><div class="card-body"> <ul class="list-disc ml-5 space-y-2"> <li>Guide hygiène numérique</li> <li>Cadre de gestion de groupe</li> <li>Exemples de plannings</li> </ul> </div></div> </div> </section> <div class="flex gap-3"> <a href="kit-pedagogique.html" class="btn btn-outline">Voir l’aperçu du kit</a> <a href="contact.html" class="btn btn-primary text-white">Demander une démo</a> </div>
 </section>
-</main>
-
-  <div id="footer"></div>
-  <script src="assets/js/include.js"></script>
+</main> <div id="footer"></div> <script src="assets/js/include.js"></script>
 </body>
 </html>
