--- a/faq.html
+++ b/faq.html
@@ -1,102 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr" data-theme="autumn">
-<head>
-  <meta charset="UTF-8">
-  <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-WMCMP74V');</script>
-  <!-- End Google Tag Manager -->
-  
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FAQ - Questions fréquentes | Ludus Mentis</title>
-  <meta name="description" content="Toutes les réponses à vos questions : âge requis, déroulement des ateliers, tarifs, place de la compétition. Tout ce que les parents doivent savoir.">
-  <meta name="keywords" content="FAQ, questions fréquentes, parents, inscription, ateliers jeux vidéo, Walhain">
-  
-  <!-- DaisyUI + Tailwind CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
-  <script src="https://cdn.tailwindcss.com"></script>
-  
-  <!-- Configuration Tailwind -->
-  <script>
-    tailwind.config = {
-      darkMode: 'class',
-      theme: {
-        extend: {
-          colors: {
-            primary: '#ea580c',
-            'primary-focus': '#c2410c',
-            secondary: '#f59e0b',
-            accent: '#ef4444',
-          },
-          fontFamily: {
-            'sans': ['Inter', 'system-ui', '-apple-system', 'sans-serif'],
-            'display': ['Space Grotesk', 'system-ui', 'sans-serif'],
-          }
-        }
-      }
-    }
-  </script>
-  
-  <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
-  
-  <!-- Custom styles -->
-  <link rel="stylesheet" href="assets/css/styles.css">
-  <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
+<head> <meta charset="UTF-8"> <!-- Google Tag Manager --> <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-WMCMP74V');</script> <!-- End Google Tag Manager --> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>FAQ - Questions fréquentes | Ludus Mentis</title> <meta name="description" content="Toutes les réponses à vos questions : âge requis, déroulement des ateliers, tarifs, place de la compétition. Tout ce que les parents doivent savoir."> <meta name="keywords" content="FAQ, questions fréquentes, parents, inscription, ateliers jeux vidéo, Walhain"> <!-- DaisyUI + Tailwind CSS --> <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" /> <script src="https://cdn.tailwindcss.com"></script> <!-- Configuration Tailwind --> <script> tailwind.config = { darkMode: 'class', theme: { extend: { colors: { primary: '#ea580c', 'primary-focus': '#c2410c', secondary: '#f59e0b', accent: '#ef4444', }, fontFamily: { 'sans': ['Inter', 'system-ui', '-apple-system', 'sans-serif'], 'display': ['Space Grotesk', 'system-ui', 'sans-serif'], } } } } </script> <!-- Fonts --> <link rel="preconnect" href="https://fonts.googleapis.com"> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet"> <!-- Custom styles --> <link rel="stylesheet" href="assets/css/styles.css"> <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
-<body class="min-h-screen bg-base-100">
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
-  
-  <div id="header"></div>
-  
-  <main class="container mx-auto px-4 py-10">
-<section class="max-w-4xl mx-auto">
-  <h1 class="text-4xl font-extrabold mb-6">FAQ</h1>
-  <div class="join join-vertical w-full">
-    
-<div class="collapse collapse-arrow join-item border border-base-300">
-  <input type="checkbox" />
-  <div class="collapse-title text-lg font-medium">Une question non couverte ?</div>
-  <div class="collapse-content"><p>Voir détails sur la page Ressources/Enjeux ou contactez-nous pour un point rapide.</p></div>
-</div>
-
-    <!-- Core questions kept -->
-    <div class="collapse collapse-arrow join-item border border-base-300">
-      <input type="checkbox" />
-      <div class="collapse-title text-lg font-medium">Est-ce adapté si mon enfant joue « trop » ?</div>
-      <div class="collapse-content"><p>Oui, dans un cadre éducatif. En cas de souffrance importante, nous orientons vers des professionnels.</p></div>
-    </div>
-    <div class="collapse collapse-arrow join-item border border-base-300">
-      <input type="checkbox" />
-      <div class="collapse-title text-lg font-medium">Est-ce une thérapie ?</div>
-      <div class="collapse-content"><p>Non. Programme pédagogique de groupe, sans diagnostic clinique.</p></div>
-    </div>
-    <div class="collapse collapse-arrow join-item border border-base-300">
-      <input type="checkbox" />
-      <div class="collapse-title text-lg font-medium">Y a-t-il des jeux violents ?</div>
-      <div class="collapse-content"><p>Non, sélection coopérative et adaptée à l’âge.</p></div>
-    </div>
-    <div class="collapse collapse-arrow join-item border border-base-300">
-      <input type="checkbox" />
-      <div class="collapse-title text-lg font-medium">Comment se passe une séance ?</div>
-      <div class="collapse-content"><p>Rituels, séquence encadrée, débrief, activité hors écran, transfert.</p></div>
-    </div>
-  </div>
-  <div class="mt-8">
-    <a href="contact.html" class="btn btn-primary text-white">Je pose ma question</a>
-  </div>
-</section>
-</main>
-  
-  <div id="footer"></div>
-  <script src="assets/js/include.js"></script>
+<body class="min-h-screen bg-base-100"> <!-- Google Tag Manager (noscript) --> <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript> <!-- End Google Tag Manager (noscript) --> <div id="header"></div> <main class="container mx-auto px-4 py-8 max-w-4xl"> <!-- Hero Section --> <section class="text-center mb-12"> <h1 class="text-4xl lg:text-5xl font-bold mb-4 text-gray-800"> Foire aux questions </h1> <p class="text-lg text-gray-600"> Toutes les réponses pour préparer sereinement l'inscription de votre enfant. </p> </section> <!-- FAQ Accordion --> <div class="space-y-4"> <!-- Question 1 --> <div class="collapse collapse-plus bg-white border-2 border-gray-200 shadow-sm"> <input type="radio" name="faq-accordion" checked="checked" /> <div class="collapse-title text-xl font-medium text-gray-800"> 👥 À qui s'adresse Ludus Mentis ? </div> <div class="collapse-content"> <p class="text-gray-600 pt-4"> Notre programme est conçu pour les <strong class="text-orange-600">jeunes de 10 à 15 ans</strong>, qu'ils soient gamers passionnés, joueurs occasionnels ou simplement curieux. </p> <ul class="mt-4 space-y-2 text-gray-600"> <li>✅ <strong>Débutants bienvenus :</strong> Pas besoin d'être expert, nous adaptons le niveau</li> <li>✅ <strong>Groupes homogènes :</strong> Maximum 8 jeunes par atelier pour un suivi personnalisé</li> <li>✅ <strong>Mixité encouragée :</strong> Garçons et filles travaillent ensemble</li> </ul> </div> </div> <!-- Question 2 --> <div class="collapse collapse-plus bg-white border-2 border-gray-200 shadow-sm"> <input type="radio" name="faq-accordion" /> <div class="collapse-title text-xl font-medium text-gray-800"> 🎮 Comment se déroule un atelier type ? </div> <div class="collapse-content"> <div class="text-gray-600 pt-4"> <p class="mb-4">Chaque atelier dure <strong class="text-orange-600">2 heures</strong> et suit une structure précise :</p> <ol class="space-y-3"> <li><strong>10 min :</strong> Accueil et objectif du jour</li> <li><strong>25 min :</strong> Première session de jeu</li> <li><strong>20 min :</strong> Débriefing et analyse en groupe</li> <li><strong>25 min :</strong> Deuxième session avec application des stratégies</li> <li><strong>20 min :</strong> Pause active (sans écran)</li> <li><strong>10 min :</strong> Mini-débriefing final</li> <li><strong>10 min :</strong> Cercle de clôture et valorisation</li> </ol> </div> </div> </div> <!-- Question 3 --> <div class="collapse collapse-plus bg-white border-2 border-gray-200 shadow-sm"> <input type="radio" name="faq-accordion" /> <div class="collapse-title text-xl font-medium text-gray-800"> 💰 Quels sont les tarifs ? </div> <div class="collapse-content"> <div class="text-gray-600 pt-4"> <div class="bg-orange-50 rounded-xl p-6 border-2 border-orange-200"> <p class="text-2xl font-bold text-orange-600 mb-2">230€ par module</p> <p class="mb-4">Un module comprend :</p> <ul class="space-y-2"> <li>✓ 7 ateliers de 2 heures (14h au total)</li> <li>✓ Tout le matériel fourni</li> <li>✓ Encadrement professionnel</li> <li>✓ Assurance incluse</li> <li>✓ Bilan de progression en fin de module</li> </ul> </div> <p class="mt-4 text-sm"> 💡 <em>Possibilité de paiement échelonné sur demande</em> </p> </div> </div> </div> <!-- Question 4 --> <div class="collapse collapse-plus bg-white border-2 border-gray-200 shadow-sm"> <input type="radio" name="faq-accordion" /> <div class="collapse-title text-xl font-medium text-gray-800"> 🏆 Y a-t-il de la compétition ? </div> <div class="collapse-content"> <p class="text-gray-600 pt-4"> Notre priorité est le <strong class="text-orange-600">développement personnel</strong> et l'esprit d'équipe, pas la compétition. </p> <div class="mt-4 space-y-3 text-gray-600"> <p> ✨ <strong>Phase 1 (actuelle) :</strong> Focus sur la coopération, la communication et le bien-être. Aucun classement, aucune pression de performance. </p> <p> 🎯 <strong>Phase 2 (future) :</strong> Une filière compétitive optionnelle pourra être proposée, accessible uniquement aux jeunes démontrant maturité et excellente gestion émotionnelle. </p> </div> </div> </div> <!-- Question 5 --> <div class="collapse collapse-plus bg-white border-2 border-gray-200 shadow-sm"> <input type="radio" name="faq-accordion" /> <div class="collapse-title text-xl font-medium text-gray-800"> 📅 Quand et où ont lieu les ateliers ? </div> <div class="collapse-content"> <div class="text-gray-600 pt-4"> <p class="mb-4"> <strong class="text-orange-600">Ouverture : Janvier 2026</strong> </p> <ul class="space-y-2"> <li>📍 <strong>Lieu :</strong> Walhain (adresse exacte communiquée aux inscrits)</li> <li>🗓️ <strong>Fréquence :</strong> 1 fois par semaine pendant 7 semaines</li> <li>⏰ <strong>Horaires :</strong> Mercredi après-midi ou samedi matin (à confirmer)</li> </ul> <div class="alert alert-info mt-4"> <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="stroke-current shrink-0 w-6 h-6"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg> <span>Les horaires définitifs seront fixés en fonction des préférences des familles inscrites.</span> </div> </div> </div> </div> <!-- Question 6 --> <div class="collapse collapse-plus bg-white border-2 border-gray-200 shadow-sm"> <input type="radio" name="faq-accordion" /> <div class="collapse-title text-xl font-medium text-gray-800"> 🎯 Comment s'inscrire ? </div> <div class="collapse-content"> <div class="text-gray-600 pt-4"> <p class="mb-4">L'inscription se fait en 3 étapes simples :</p> <ol class="space-y-3"> <li> <strong>1️⃣ Contact initial :</strong> Remplissez le <a href="contact.html" class="text-orange-600 underline">formulaire de contact</a> ou écrivez à info@ludusmentis.be </li> <li> <strong>2️⃣ Échange personnalisé :</strong> Nous vous contactons pour discuter des besoins de votre enfant </li> <li> <strong>3️⃣ Confirmation :</strong> Validation de l'inscription et envoi des informations pratiques </li> </ol> <div class="mt-6 text-center"> <a href="contact.html" class="btn btn-primary text-white"> Commencer l'inscription </a> </div> </div> </div> </div> <!-- Question 7 --> <div class="collapse collapse-plus bg-white border-2 border-gray-200 shadow-sm"> <input type="radio" name="faq-accordion" /> <div class="collapse-title text-xl font-medium text-gray-800"> 👨‍👩‍👧‍👦 Comment les parents sont-ils impliqués ? </div> <div class="collapse-content"> <p class="text-gray-600 pt-4"> Nous croyons en une <strong class="text-orange-600">collaboration étroite</strong> avec les familles : </p> <ul class="mt-4 space-y-2 text-gray-600"> <li>📊 <strong>Bilans réguliers :</strong> Points d'étape sur les progrès de votre enfant</li> <li>👥 <strong>Rencontres parents :</strong> Échanges en fin de module</li> <li>📱 <strong>Communication ouverte :</strong> Disponibles pour vos questions</li> <li>🎮 <strong>Conseils pratiques :</strong> Guide pour accompagner le gaming à la maison</li> </ul> </div> </div> </div> <!-- Contact CTA --> <section class="mt-12 bg-gradient-to-r from-orange-50 to-amber-50 rounded-3xl p-8 text-center border-2 border-orange-200"> <h2 class="text-2xl font-bold mb-4 text-gray-800">Une question non couverte ?</h2> <p class="text-gray-600 mb-6"> Nous sommes là pour répondre à toutes vos interrogations et vous rassurer. </p> <div class="flex flex-col sm:flex-row gap-4 justify-center"> <a href="contact.html" class="btn btn-primary text-white"> Nous contacter </a> <a href="mailto:info@ludusmentis.be" class="btn btn-outline btn-primary"> info@ludusmentis.be </a> </div> </section> <section class="max-w-4xl mx-auto px-4"> <div class="join join-vertical w-full mt-6"> <div class="collapse collapse-arrow join-item border border-base-300"> <input type="checkbox" /><div class="collapse-title text-lg font-medium">Quel âge et quel niveau ?</div> <div class="collapse-content"><p>De 10 à 15 ans pour le programme actuel. Aucun niveau requis ; activités adaptées au groupe.</p></div> </div> <div class="collapse collapse-arrow join-item border border-base-300"> <input type="checkbox" /><div class="collapse-title text-lg font-medium">Équipement à apporter ?</div> <div class="collapse-content"><p>Rien. Matériel fourni, tenue confortable recommandée.</p></div> </div> <div class="collapse collapse-arrow join-item border border-base-300"> <input type="checkbox" /><div class="collapse-title text-lg font-medium">Quels jeux ?</div> <div class="collapse-content"><p>Jeux coopératifs, adaptés à l’âge, sans contenus violents. Les titres varient selon les objectifs.</p></div> </div> <div class="collapse collapse-arrow join-item border border-base-300"> <input type="checkbox" /><div class="collapse-title text-lg font-medium">Taille des groupes / encadrement</div> <div class="collapse-content"><p>Groupes à effectif limité. Encadrement formé à la gestion de groupe et à l’hygiène numérique.</p></div> </div> <div class="collapse collapse-arrow join-item border border-base-300"> <input type="checkbox" /><div class="collapse-title text-lg font-medium">Remboursement / attestation</div> <div class="collapse-content"><p>Attestation de participation fournie. Certaines mutualités remboursent : vérifiez auprès de la vôtre.</p></div> </div> <div class="collapse collapse-arrow join-item border border-base-300"> <input type="checkbox" /><div class="collapse-title text-lg font-medium">Inscription et annulation</div> <div class="collapse-content"><p>Voir la page Contact pour toute question logistique.</p></div> </div> </div>
+</section></main> <div id="footer"></div> <script src="assets/js/include.js"></script>
 </body>
 </html>
